feat: implement advanced elasticsearch search and optimize integration tests
# Conflicts:
#	.github/workflows/ci-cd.yml